[package]
name          = "arknet-verifier"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
description   = "L2 verifier role: three-tier output verification via VRF selection."

[dependencies]
arknet-common    = { workspace = true }
arknet-crypto    = { workspace = true }
arknet-chain     = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
async-trait      = { workspace = true }
blake3           = { workspace = true }
hex              = { workspace = true }

[dev-dependencies]
tokio            = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait      = { workspace = true }
arknet-receipts  = { workspace = true }
tempfile         = "3.10"
